--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
+  <link rel="shortcut icon" href="img/Race car.ico">
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>John Doe - Business Administration</title>
+  <title>Ace McAfee - Business Administration</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Ace McAfee</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/Ace.png" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,27 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Ace McAfee
         </h1>
         <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <p class="lead mb-4">Business Major at UC Riverside<br><br>
 
-        Enter bio here<br><br>
+        I'm Ace McAfee, I am an ambitious first year at the University of California Riverside, I'm excited to get a good start on a bright future. I've worked as a mechanics assistant and camp counselor, I'm currently looking for internships in the business field. I'm interested in finance and real estate. <br>
+        <br> I was born in sunny Santa Monica, I grew up around tech business, finance firms, and real estate funds, I look to specialize in fields similar to these and grow my skills to a strong amount.<br>
 
-        Enter bio here
+        
         </p>
         <div class="social-icons">
-          <a target="_blank" href="https://linkedin.com">
+          <a target="_blank" href="https://linkedin.com/AceMcAfee">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" href="https://github.com">
+          <a target="_blank" href="https://github.com/AceMcAfee">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" href="https://twitter.com">
+          <a target="_blank" href="https://twitter.com/AceMcAfee">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" href="mailto:youremail@gmail.com">
+          <a target="_blank" href="mailto:amcafee90@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,12 +93,12 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">Company</a></div>
+            <h3 class="mb-0">Counselor</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://Ferrari.com">Big Bear YMCA</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Watched over a group of 10 campers <br>
+              • Ensured safety and fun times for everyone <br>
+              • Helped keep routine schedule for campers and attendance to all events <br>
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -107,11 +108,13 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">Whole Foods</a></div>
+            <h3 class="mb-0">Assistant Mechanic</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">Gran Turismo Autoshop</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Responsible for keeping tabs on parts<br>
+              • Assisting with car repair<br>
+              • Dealing with exotic cars<br>
+              • Administration work<br> 
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -122,18 +125,17 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Intern </h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">Deutsche Marketing</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Helped supply office to keep things running smoothly <br>
+            • Assisted with any and all projects needed <br>
+            • Learned from and interviewed employees to get a full educational expirience from my work <br> 
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">Semptember 2019 - June 2023</span>
           </div>
         </div>
 
@@ -152,11 +154,11 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Bachelors of Business Administration</div>
+            <div>BA in Business Administration</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">August 2019 - June 2023</span>
           </div>
         </div>
 
@@ -167,7 +169,7 @@
             <div>Project Management</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">February 2022</span>
           </div>
         </div>
 
@@ -175,10 +177,10 @@
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
             <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
+            <div>Financial Systems</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">August 2019 - May 2023</span>
           </div>
         </div>
 
@@ -191,7 +193,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/IMG-2422 (1).jpg" width="500px"> <br>
+            <img src="img/IMG-2731 (1).jpg" width="500px"> <br>
+            <img src="img/Img (1).jpg" width="500px"> <br>
+            <img src="img/picture.png" width="500px"> <br>
         </center>
       </div>
     </section>
@@ -199,7 +204,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Ace McAfee</center><br>
 
 
   </div>
